--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "usage"
   ],
   "main": "./lib/index.js",
+  "scripts": {
+    "test": "jest"
+  },
   "author": "Lucian Cooper <cooperlucian@gmail.com>",
   "license": "MIT",
   "repository": {
@@ -28,6 +31,9 @@
   "lint-staged": {
     "*.js": "eslint"
   },
+  "jest": {
+    "verbose": true
+  },
   "dependencies": {
     "ansi-regex": "^5.0.0",
     "chalk": "^4.1.0",
@@ -41,6 +47,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jsdoc": "^32.0.2",
     "husky": "^5.0.9",
+    "jest": "^26.6.3",
     "lint-staged": "^10.5.4"
   }
 }
