--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   ],
   "main": "./lib/index.js",
   "scripts": {
+    "lint": "eslint .",
     "test": "jest"
   },
   "author": "Lucian Cooper <cooperlucian@gmail.com>",
@@ -46,10 +47,12 @@
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
     "@lcooper/commitlint-config": "^1.1.0",
-    "@lcooper/eslint-config": "^1.1.4",
+    "@lcooper/eslint-config": "^1.2.0",
+    "@lcooper/eslint-config-jest": "^1.0.0",
     "chalk": "^4.1.0",
     "eslint": "^7.20.0",
     "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-jest": "^24.1.5",
     "eslint-plugin-jsdoc": "^32.0.2",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
