--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,17 @@ language: node_js
 
 node_js:
   - node
+
+cache:
+  yarn: true
+  directories:
+    - node_modules
+
+before_install:
+  - yarn global add codecov
+
+script:
+  - yarn coverage
+
+after_success:
+  - codecov
