--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "scripts": {
     "lint": "eslint .",
     "test": "jest",
-    "coverage": "jest --coverage"
+    "coverage": "jest --coverage",
+    "screencasts": "node tasks/screencasts.js"
   },
   "author": "Lucian Cooper <cooperlucian@gmail.com>",
   "license": "MIT",
@@ -61,6 +62,8 @@
     "eslint-plugin-jsdoc": "^32.0.2",
     "husky": "^4.3.8",
     "jest": "^26.6.3",
-    "lint-staged": "^10.5.4"
+    "lint-staged": "^10.5.4",
+    "svg-term": "^1.3.1",
+    "svgo": "^2.2.2"
   }
 }
