--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,27 @@
 language: node_js
 
+os:
+  - linux
+  - osx
+  - windows
+
 node_js:
   - node
+  - lts/*
 
 cache:
   yarn: true
   directories:
     - node_modules
 
-before_install:
-  - yarn global add codecov
-
-script:
-  - yarn coverage
-
-after_success:
-  - codecov
+jobs:
+  include:
+    - stage: coverage
+      node_js:
+        - node
+      before_install:
+        - yarn global add codecov
+      script:
+        - yarn coverage
+      after_success:
+        - codecov
