--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
     "lint": "eslint .",
     "test": "jest",
     "coverage": "jest --coverage",
+    "prepublishOnly": "yarn test",
     "screencasts": "node tasks/screencasts.js"
+  },
+  "publishConfig": {
+    "access": "public"
   },
   "author": "Lucian Cooper <cooperlucian@gmail.com>",
   "license": "MIT",
