chore: add `files` field to package.json

--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "usage"
   ],
   "main": "./lib/index.js",
+  "files": [
+    "lib"
+  ],
   "scripts": {
     "lint": "eslint .",
     "test": "jest",
