--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,6 @@ jobs:
       before_install:
         - yarn global add codecov
       script:
-        - yarn coverage
+        - yarn test --coverage
       after_success:
         - codecov
